# kassette2

./: Cargo.toml  Readme.md  build.rs  schematic.fzz
.cargo/: config
config/: Cargo.toml
config/src/: lib.rs
firmware/: Cargo.toml  Makefile
firmware/src/: blink.rs  config.rs  led.rs  main.rs  onoffbutton.rs  output.rs  panic.rs  pwm.pio  queue.rs  sdcard.rs
id_reader/: Cargo.toml
id_reader/src/: lib.rs
id_reader_firmware/: Cargo.toml  Makefile
id_reader_firmware/src/: main.rs
src/: config.rs  main.rs  output.rs  pwm.pio  queue.rs  sdcard.rs
sync_tool/: .gitignore  Cargo.toml
sync_tool/src/: main.rs  media_definition.rs
