[package]
name = "kassette2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = true
opt-level = "z"
lto = "thin"

[dependencies]
embedded-hal = "0.2.7"
nb = "1.0.0"
cortex-m = "0.7.6"
cortex-m-rt = "0.7.2"
# Panic behaviour, see https://crates.io/keywords/panic-impl for alternatives
panic-halt = "0.2.0"
rp-pico = "0.6"
pio = "0.2.1"
pio-proc = "0.2.1"
micromath = "2.0"
#usbd-serial = "0.1"
