[package]
name = "kassette2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = true
opt-level = "z"
lto = "thin"

[dependencies]
embedded-hal = "0.2.7"
nb = "1.0.0"
cortex-m = "0.7.6"
cortex-m-rt = "0.7.3"
rp-pico = "0.6"
pio = "0.2.1"
pio-proc = "0.2.1"
bytemuck = "1.12"
micromath = "2.0"
fugit = "0.3.6"
ringbuf = { version = "0.3.2", default-features = false}
#usbd-serial = "0.1"
embedded-sdmmc = "0.4"
acid_io = { git = "https://github.com/dataphract/acid_io", default-features=false }
embedded-alloc = { git = "https://github.com/rust-embedded/embedded-alloc" }#"0.5.0"
config = { path = "../config" }
id_reader = { path = "../id_reader" }
embedded-qoa = { path = "../../embedded-qoa" }
