[package]
name = "kassette2"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = true
opt-level = "z"
lto = "thin"

[dependencies]
embedded-hal = "0.2.7"
cortex-m = "0.7.6"
cortex-m-rt = "0.7.3"
rp-pico = "0.6"
pio = "0.2.1"
pio-proc = "0.2.1"
bytemuck = { version = "1.12", features=["derive"] }
fugit = "0.3.6"
ringbuf = { version = "0.3.2", default-features = false}
embedded-sdmmc = { git = "https://github.com/ftilde/embedded-sdmmc-rs" }
acid_io = { git = "https://github.com/dataphract/acid_io", default-features=false }
config = { path = "../config" }
id_reader = { path = "../id_reader" }
embedded-qoa = { git = "https://github.com/ftilde/embedded-qoa" }
