[package]
name = "id_reader"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal = "0.2.7"
mfrc522 = "0.4.1"
bytemuck = { version = "1.12", features=["derive"] }
