[package]
name = "sync_tool"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
symphonia = "0.5.2"
clap = {version = "4.1.4", features=["derive"]}
config = { path = "../config"}
id_reader = { path = "../id_reader"}
embedded-qoa = { git = "https://github.com/ftilde/embedded-qoa", features=["std"]}
rubato = "0.12.0"
progressing = "3.0.2"
vorbis_rs = "0.5.0"
